[metadata]
name = rh-sec-data
author = Nikhil Dhandre
author-email = ndhandre@redhat.com
license_file = LICENSE
description = Red Hat Security Data API
url = https://github.com/digitronik/rh-sec-data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    =src
packages = find:
zip_safe = False
setup_requires = setuptools_scm
include_package_data = True

install_requires =
    click
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rh-sec-data=rh_sec_data.cli:main

[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100
